Integrate recipes into route planning with ongoing item tracking
WHY: Enable recipes as route objectives with PRIORITY/ONGOING distinction

CHANGES:
- PlannerRequestDto: Add ongoingItemNames field for passive tracking
- AreaDto: Add ongoingMatchItems field for bonus loot display
- PlannerService: resolveOngoingItems() to check route areas
- PRIORITY items: Influence route calculation
- ONGOING items: Tracked passively, show bonuses on route

BEHAVIOR:
- Recipe ingredients resolve to item names
- PRIORITY → targetItemNames (affects routing)
- ONGOING → ongoingItemNames (bonus notifications)
- Route areas checked against ongoing loot types
- Frontend displays blue indicators for bonus matches

TESTING:
- PlannerServiceOngoingItemsTest: Tests ongoing item resolution
- Updated existing planner tests for new DTO fields

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>